# frozen-bubble-sdl2-vibecode

./: CHANGELOG.md  CMakeLists.txt  CMakeListsEmscripten.txt  IMPLEMENTATION_PLAN.md  IN_GAME_HOSTING.md  MODULE_PLAN.md  NETWORK_PLAY.md  QUICKSTART.md  README.md  START_HERE.md  TASKS.md  TEST_NETWORK.md  TODO.md  WASM_PORT.md  start-server.sh
.github/workflows/: build.yml
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/java/org/frozenbubble/: AssetExtractor.java  FrozenBubbleActivity.java
cmake/: Emscripten.cmake
docker/: Dockerfile
server/: CMakeLists.txt  fb-server.c  game.c  net.c  stats.c  stats.h  ws.c  ws.h
src/: audiomixer.cpp  audiomixer.h  bubblegame.cpp  bubblegame.h  frozenbubble.cpp  frozenbubble.h  gamesettings.cpp  gamesettings.h  highscoremanager.cpp  highscoremanager.h  logger.cpp  logger.h  main.cpp  mainmenu.cpp  mainmenu.h  menubutton.cpp  menubutton.h  networkclient.cpp  networkclient.h  networkclient_wasm.cpp  platform.cpp  platform.h  shaderstuff.cpp  shaderstuff.h  transitionmanager.cpp  transitionmanager.h  ttftext.cpp  ttftext.h
